--- a/client/style.css
+++ b/client/style.css
@@ -22,10 +22,15 @@ body {
 	overflow-y: hidden;
 }
 
-img {
+.pixDoc img {
 	width: 100%;
   height: auto;
 	background-color: #352545;
+}
+
+.showDocFull img {
+	border: 48px cyan solid;
+	background-color: #eee;
 }
 
 h1 {
@@ -64,7 +69,7 @@ h1 {
 figcaption {
 	padding-bottom: 3px;
 	margin-bottom: 9px;
-	border-bottom: #555 1px dashed;
+	/*border-bottom: #555 1px dashed;*/
 }
 
 
