Improved scaling and positioning of larger images
– for the thumbnail browse view: larger images are now scaled by 0.5x
if considerably bigger than the thumbnail size. On Retina screens this
means 1:1 pixel ratio. Larger images are also better centered on the
thumbnail canvases.
+ SpriteBox view now with full color window background

--- a/client/style.less
+++ b/client/style.less
@@ -45,6 +45,9 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			canvas {
+				display: block;
+			}
 
 			img {
 				  display: block;
@@ -53,3 +56,11 @@
 	}
 }
 
+.contentbackground {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+}
