Tags can be added and removed

--- a/client/style.less
+++ b/client/style.less
@@ -6,6 +6,21 @@
 		img {
 			border: 1px #aaa solid;
 		}
+		figcaption {
+			// background-color: red;
+			.tag {
+				background-color: #fff;
+				padding-left: 4px; 
+				border: 1px solid #ddd;
+				margin: 0;
+				.remove {
+					color: black;
+					background-color: #ddd;
+					padding: 0px 4px;
+					margin-left: 6px;
+				}
+			}
+		}
 	}
 	form {
 		margin: 10px;
