--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -14,8 +14,13 @@
 					<li><span class="property">metadata.width</span>: {{this.metadata.width}}</li>
 					<li><span class="property">metadata.height</span>: {{this.metadata.height}}</li>
 					<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
-					<li><span class="property">metadata.tags</span>: {{this.metadata.tags}}</li>
 					<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
+					<li>
+						<span class="property">metadata.tags</span>: 
+						{{#each this.metadata.tags}}
+							<span class="tag">{{this}}<span class="remove">x</span></span>
+						{{/each}}
+					</li>
 				</ol>
 			</figcaption>
 		</figure>
