Navigation organization improvements
– direct links to docEdit and spriteBox from pool view

--- a/client/style.less
+++ b/client/style.less
@@ -7,7 +7,7 @@
 			border: 1px #aaa solid;
 		}
 		figcaption {
-			// background-color: red;
+			margin: 0px;
 			.tag {
 				background-color: #fff;
 				padding-left: 4px; 
