--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -29,9 +29,11 @@
 	<div class="contentbackground" style="background-color: {{ backColor }}">
 		<div class="contentdisplay">
 			<div>
-				<canvas id="myCanvas" width="{{ scaledSprite.widthDevice }}" height="{{ scaledSprite.heightDevice }}" style="width:{{ scaledSprite.width }}px; 	height: {{ scaledSprite.height }}px;	">
-					This browser does not support HTML5 canvas
-				</canvas>
+				<a href="" class="goBack">
+					<canvas id="myCanvas" width="{{ scaledSprite.widthDevice }}" height="{{ 	scaledSprite.heightDevice }}" style="width:{{ scaledSprite.width }}px; 		height: {{ scaledSprite.height }}px;	">
+						This browser does not support HTML5 canvas
+					</canvas>
+				</a>
 			</div>
 			<!-- <img id="genImg" src="myPicture.png" alt="Description of my picture" /> -->
 			<span class="spriteBoxInfoToggle">©EbOY</span>
