Head displays count of documents found

--- a/client/style.less
+++ b/client/style.less
@@ -23,6 +23,7 @@
 		align-self: flex-end;
 		// flex-grow: 2;
 		input[type=text]{
+			font-weight: bold;
 			font-family: inherit;
 			font-size: inherit;
 			// background-color: Linen;
