--- a/client/style.less
+++ b/client/style.less
@@ -2,12 +2,20 @@
 @linkColor: DodgerBlue;
 @almostBlack: #272822;
 
+html {
+	height: 100%;
+	// background-color: blue;
+}
+
 body {
 	font-family: Menlo, monospace;
 	font-size: 9pt;
 	text-align: left;
-	margin: 0;
 	color: @almostBlack;
+	// height: 100%;
+	margin: 0;
+	padding: 0;
+	height: 100%;
 }
 
 .header {
@@ -104,19 +112,6 @@ body {
 			}
 		}
 	}
-	.editDocValues {
-		font-size: 18px;
-		// background-color: cyan;
-		padding: 12px;
-		border-top: 1px #ccc solid;
-		input[type=text] {
-			margin: 0px;
-			padding: 2px;
-			font-family: inherit;
-			font-size: inherit;
-			border: 0px;
-		}
-	}
 }
 
 .container {
@@ -165,15 +160,105 @@ body {
 		}
 	}
 }
-
+// .imprint {
+// 	// margin-left: 12px;
+// 	z-index: 5;
+// 	top: 0px;
+// 	position: fixed;
+// 	// background-color: yellow;
+// 	margin: 12px;
+// 	text-shadow:
+// 		rgba(0,0,0,0.1) -1px 0,
+// 		rgba(0,0,0,0.1) 0 -1px,
+// 		rgba(255,255,255,0.1) 1px 0,
+// 		rgba(255,255,255,0.1) 0 1px,
+// 		rgba(0,0,0,0.2) -1px -1px,
+// 		rgba(255,255,255,0.1) 1px 1px;
+// }
 .contentbackground {
 	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0;
+	height:100%;
+	// display: flex;
+	// justify-content: center;
+	// align-items: center;
+	// flex-direction: column;
+	// margin: 0;
+	.spriteBoxImage {
+		width: 100%;
+		height:100%;
+		// padding-bottom: 2em;
+		// background-color: red;
+		z-index: 0;
+		flex-grow: 1;
+		// padding: 3px;
+		// margin: 24px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		canvas {
+			// padding-bottom: 48px;
+		}
+	}
 }
+
+.docMeta {
+	padding: 12px;
+	bottom: 0px;
+	position: fixed;
+	z-index: 5;
+	color: #aaa;
+	// align-self: flex-end;
+	width: 100%;
+	background-color: #E6E6E6;
+	// padding-bottom: 1em;
+	padding: 0;
+	a {
+		color: #aaa;
+	}
+	.editMeta {
+		font-size: 18px;
+		// background-color: cyan;
+		padding: 12px;
+		border-top: 1px #ccc solid;
+		input[type=text] {
+			margin: 0px;
+			padding: 2px;
+			font-family: inherit;
+			font-size: inherit;
+			border: 0px;
+			background-color: inherit;
+		}
+	}
+}
+
+.eboycopyright {
+	position: fixed;
+	right: 0px;
+	padding: 0 2px;
+}
+.spriteBoxInfoToggle {
+	position: fixed;
+	right: 0px;
+	bottom: 0px;
+	padding: 4px 8px;
+	// background-color: #171714;
+}
+
+ol {
+	background-color: #171714;
+	margin: 0;
+	padding: 0em 0em;
+}
+
+ol li {
+	list-style-type: none;
+}
+
+ol li .property {
+	color: #D39322;
+}
+
 
 .myPixInput {
 	/*width: auto;*/
@@ -197,16 +282,4 @@ body {
 .previous:active, .next:active {
 	color: white;
 	background-color: black;
-}
-
-ol {
-	padding: 0 0 0 1em;
-}
-
-ol li {
-	list-style-type: none;
-}
-
-ol li .property {
-	color: Crimson;
 }
