--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -3,28 +3,14 @@
 	<div class="showDocFull">
 		<div class="docOverview">
 			<!-- <img style="background-color: none" src="{{ this.url 	store='OriginalPix' }}" width="{{ this.	metadata.width }}" height="{{ this.metadata.height }}" /> -->
-			<img style="background-color: none" src="{{ this.url 	store='OriginalPix' }}" width="{{ 	deviceDimensions.width }}" height="{{ deviceDimensions.height }}" />
+			<!-- <img style="background-color: none" src="{{ this.url 	store='OriginalPix' }}" width="{{ 	deviceDimensions.width }}" height="{{ deviceDimensions.height }}" /> -->
 			<a href="{{ pathFor 'spriteBox' boxsize='512' }}">
 				<img style="background-color: {{ backColor }}" src="{{ this.url store='OriginalPix' }}" width="{{ 	deviceDimensions.width }}" height="{{ deviceDimensions.height }}" />
 			</a>
-			<div class="docMeta">
-				<ol>
-					<li><span class="property">name</span>: {{ this.name }}</li>
-					<li><span class="property">uploadedAt</span>: {{this.uploadedAt}}</li>
-					<li><span class="property">metadata.width</span>: {{this.metadata.width}}</li>
-					<li><span class="property">metadata.height</span>: {{this.metadata.height}}</li>
-					<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
-					<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
-					<li>
-						<span class="property">metadata.tags</span>: 
-						{{#each this.metadata.tags}}
-							<span class="tag">{{this}}<span class="remove">X</span></span>
-						{{/each}}
-					</li>
-				</ol>
-			</div>
 		</div>
-		<div class="editDocValues">
+	</div>
+	<div class="docMeta">
+		<div class="editMeta">
 			<div>add:
 				<input
 					type="text"
@@ -47,5 +33,19 @@
 				>
 			</div>
 		</div>
+		<ol>
+			<li><span class="property">name</span>: {{ this.name }}</li>
+			<li><span class="property">uploadedAt</span>: {{this.uploadedAt}}</li>
+			<li><span class="property">metadata.width</span>: {{this.metadata.width}}</li>
+			<li><span class="property">metadata.height</span>: {{this.metadata.height}}</li>
+			<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
+			<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
+			<li>
+				<span class="property">metadata.tags</span>: 
+				{{#each this.metadata.tags}}
+					<span class="tag">{{this}}<span class="remove">(X)</span></span>
+				{{/each}}
+			</li>
+		</ol>
 	</div>
 </template>
