--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -1,4 +1,5 @@
 <template name="spriteBox">
+<html>
 	<script>
 		var myImage = new Image();
 		myImage.src="{{ sprite.url store='OriginalPix' }}";
@@ -26,39 +27,43 @@
 			foo.href = dataURL;
 		}
 	</script>
+	<div class="eboycopyright" style="color:{{ inverseBackColor }}">©eBoy</div>
+	<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
 	<div class="contentbackground" style="background-color: {{ backColor }}">
-		<div class="contentdisplay">
+		<div class="spriteBoxImage">
 			<div>
 				<a href="" class="goBack">
-					<canvas id="myCanvas" width="{{ scaledSprite.widthDevice }}" height="{{ 	scaledSprite.heightDevice }}" style="width:{{ scaledSprite.width }}px; 		height: {{ scaledSprite.height }}px;	">
+					<canvas id="myCanvas" width="{{ scaledSprite.widthDevice }}" height="{{ scaledSprite.heightDevice }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;	">
 						This browser does not support HTML5 canvas
 					</canvas>
 				</a>
 			</div>
 			<!-- <img id="genImg" src="myPicture.png" alt="Description of my picture" /> -->
-			<span class="spriteBoxInfoToggle">©EbOY</span>
-			<figcaption id="spriteBoxInfo" style="display: {{ visibility }}">
-				<ol>
-					<li><span class="property">name</span>: {{ sprite.name }}</li>
-					<li><span class="property">uploadedAt</span>: {{sprite.uploadedAt}}</li>
-					<li><span class="property">metadata.width</span>: {{sprite.metadata.width}}</li>
-					<li><span class="property">metadata.height</span>: {{sprite.metadata.height}}</li>
-					<li><span class="property">metadata.copyright</span>: {{sprite.metadata.copyright}}</li>
-					<li><span class="property">metadata.tags</span>: {{sprite.metadata.tags}}</li>
-					<li><span class="property">metadata.backColor</span>: {{ sprite.metadata.backColor }}</li>
-				</ol>
-				<ol>
-					<li><span class="property">boxsize</span>: {{ boxsize }}</li>
-					<li><span class="property">scaledSprite.width</span>: {{ scaledSprite.width }}</li>
-					<li><span class="property">scaledSprite.height</span>: {{ scaledSprite.height }}</li>
-					<li><span class="property">scaledSprite.scaleFactor</span>: {{ scaledSprite.scaleFactor }}x</li>
-					<li><span class="property">window.devicePixelRatio</span>: {{ devicePixelRatio }} </li>
-					<li><span class="property">scaledSprite.widthDevice</span>: {{ scaledSprite.widthDevice }}</li>
-					<li><span class="property">scaledSprite.heightDevice</span>: {{ scaledSprite.heightDevice }}</li>
-					<li><span class="property">scaledSprite.scaleFactorDevice</span>: {{ scaledSprite.scaleFactorDevice }}x</li>
-					<li><span class="property">download</span>: <a id="genImg" href="" target="_blank">PNG</a></li>
-				</ol>
-			</figcaption>
+			
+		</div>
+		<div class="docMeta" id="spriteBoxInfo" style="display: {{ visibility }}">
+			<div class="spriteBoxInfoToggle">X</div>
+			<ol>
+				<li><span class="property">name</span>: {{ sprite.name }}</li>
+				<li><span class="property">date-added</span>: {{sprite.uploadedAt}}</li>
+				<li><span class="property">width</span>: {{sprite.metadata.width}}</li>
+				<li><span class="property">height</span>: {{sprite.metadata.height}}</li>
+				<li><span class="property">copyright</span>: {{sprite.metadata.copyright}}</li>
+				<li><span class="property">tags</span>: {{sprite.metadata.tags}}</li>
+				<li><span class="property">background-color</span>: {{ sprite.metadata.backColor }}</li>
+			</ol>
+			<ol>
+				<li><span class="property">boxsize</span>: {{ boxsize }}</li>
+				<li><span class="property">scaledSprite-width</span>: {{ scaledSprite.width }}</li>
+				<li><span class="property">scaledSprite-height</span>: {{ scaledSprite.height }}</li>
+				<li><span class="property">scaledSprite-scaleFactor</span>: {{ scaledSprite.scaleFactor }}x</li>
+				<li><span class="property">window-devicePixelRatio</span>: {{ devicePixelRatio }} </li>
+				<li><span class="property">scaledSprite-widthDevice</span>: {{ scaledSprite.widthDevice }}</li>
+				<li><span class="property">scaledSprite-heightDevice</span>: {{ scaledSprite.heightDevice }}</li>
+				<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ scaledSprite.scaleFactorDevice }}x</li>
+				<li><span class="property">download</span>: <a id="genImg" href="" target="_blank">PNG</a></li>
+			</ol>
 		</div>
 	</div>
+</html>
 </template>
