--- a/client/style.less
+++ b/client/style.less
@@ -114,6 +114,13 @@ body {
 	}
 }
 
+.loginform {
+	margin: 24px;
+	ol {
+		margin-top: 2em;
+	}
+}
+
 .container {
 	display: flex;
 	flex-direction: row;
@@ -237,6 +244,7 @@ body {
 	right: 0px;
 	padding: 0 2px;
 }
+
 .spriteBoxInfoToggle {
 	position: fixed;
 	right: 0px;
@@ -253,6 +261,7 @@ ol {
 
 ol li {
 	list-style-type: none;
+	color: #aaa;
 }
 
 ol li .property {
