--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -37,8 +37,12 @@
 			</script>
 
 			<div class="docbox" style="background-color: {{ backColor }}">
-				{{#if currentUser}}
-					<div class="docinfo"><span class='remove'>X</span><a href="{{ pathFor 'docEdit' }}"> {{ this.metadata.backColor }} {{ this.metadata.width }}w {{ scaledSprite.scaleFactor }}x</a></div>
+				{{#if currentUser.profile.isEditor}}
+					<div class="docinfo"><span class='remove'>X</span>
+						<a href="{{ pathFor 'docEdit' }}">
+							{{ this.metadata.backColor }} {{ this.metadata.width }}w {{ scaledSprite.scaleFactor }}x
+						</a>
+					</div>
 				{{/if}}
 				<figure>
 					<a href="{{ pathFor 'spriteBox' boxsize='512' }}">
