--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -24,10 +24,12 @@
 			var foo = document.getElementById("genImg");
 			var dataURL = c.toDataURL("image/png");
 			// foo.src = imageGenerated;
-			foo.href = dataURL;
+			{{#if currentUser.profile.isEditor}}
+				foo.href = dataURL;
+			{{/if}}
 		}
 	</script>
-	<div class="eboycopyright" style="color:{{ inverseBackColor }}">©eBoy</div>
+	<div class="eboycopyright" style="color:{{ inverseBackColor }}"><span class="previousDoc">previous</span> | ©eBoy | <span class="nextDoc">next</span></div>
 	<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
 	<div class="contentbackground" style="background-color: {{ backColor }}">
 		<div class="spriteBoxImage">
@@ -52,17 +54,20 @@
 				<li><span class="property">tags</span>: {{sprite.metadata.tags}}</li>
 				<li><span class="property">background-color</span>: {{ sprite.metadata.backColor }}</li>
 			</ol>
-			<ol>
-				<li><span class="property">boxsize</span>: {{ boxsize }}</li>
-				<li><span class="property">scaledSprite-width</span>: {{ scaledSprite.width }}</li>
-				<li><span class="property">scaledSprite-height</span>: {{ scaledSprite.height }}</li>
-				<li><span class="property">scaledSprite-scaleFactor</span>: {{ scaledSprite.scaleFactor }}x</li>
-				<li><span class="property">window-devicePixelRatio</span>: {{ devicePixelRatio }} </li>
-				<li><span class="property">scaledSprite-widthDevice</span>: {{ scaledSprite.widthDevice }}</li>
-				<li><span class="property">scaledSprite-heightDevice</span>: {{ scaledSprite.heightDevice }}</li>
-				<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ scaledSprite.scaleFactorDevice }}x</li>
-				<li><span class="property">download</span>: <a id="genImg" href="" target="_blank">PNG</a></li>
-			</ol>
+			{{#if currentUser.profile.isEditor}}
+				<ol>
+					<li><span class="property">boxsize</span>: {{ boxsize }}</li>
+					<li><span class="property">scaledSprite-width</span>: {{ scaledSprite.width }}	</li>
+					<li><span class="property">scaledSprite-height</span>: {{ scaledSprite.height 	}}</li>
+					<li><span class="property">scaledSprite-scaleFactor</span>: {{ scaledSprite.scaleFactor }}x</li>
+					<li><span class="property">window-devicePixelRatio</span>: {{ 	devicePixelRatio }} </li>
+					<li><span class="property">scaledSprite-widthDevice</span>: {{ scaledSprite.widthDevice }}</li>
+					<li><span class="property">scaledSprite-heightDevice</span>: {{ scaledSprite.heightDevice }}</li>
+					<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ 	scaledSprite.scaleFactorDevice }}x</li>
+					<li><span class="property">download</span>: <a id="genImg" href="" target="	_blank">PNG</a></li>
+				</ol>
+			{{/if}}
+			<!-- {{ keypress }} -->
 		</div>
 	</div>
 </html>
