Tried single view pagination and failed
– code is commented out but preserved as reference

--- a/client/templates/Headers.html
+++ b/client/templates/Headers.html
@@ -30,7 +30,7 @@
 		<input 
 			type="text"
 			name="searchDB"
-			value="{{ searchSlug }}"
+			value="{{ slug }}"
 			class="searchFor"
 			maxlength="24"
 			size="9">
