--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -29,7 +29,14 @@
 			{{/if}}
 		}
 	</script>
-	<div class="eboycopyright" style="color:{{ inverseBackColor }}"><span class="previousDoc">previous</span> | ©eBoy | <span class="nextDoc">next</span></div>
+	<div class="eboycopyright" style="color:{{ inverseBackColor }}">©eBoy
+<!-- 		<a class="previousDoc">
+			previous
+		</a>
+		<a class="nextDoc">
+			next
+		</a> -->
+	</div>
 	<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
 	<div class="contentbackground" style="background-color: {{ backColor }}">
 		<div class="spriteBoxImage">
