--- a/client/style.less
+++ b/client/style.less
@@ -93,7 +93,8 @@ body {
 	.docOverview {
 		margin: 0px;
 		img {
-			border: 1px #ccc solid;
+			border: 6px #eee solid;
+			// padding: 12px;
 		}
 		.docMeta {
 			margin: 0px;
