Switched to GridFS
> easier db replication
> easier db backup/recovery
> no file system limitations

--- a/client/templates/Headers.html
+++ b/client/templates/Headers.html
@@ -1,6 +1,9 @@
 <template name="mainHeader">
 	<div class="header">
 		<span class="headline">
+			{{#if currentUser.profile.isEditor}}
+				<a href="{{ pathFor 'addDoc' }}">+</a>
+			{{/if}}
 			<a href="{{ pathFor route='pool' page=1 slug='all' }}" class="dblogo">eboydb</a>: {{ postsCount }} docs – p{{ 	currentPage }}/{{ totalPages }}
 		</span>
 		{{> searchPool}}
@@ -12,7 +15,7 @@
 		<span class="headline">
 			<a href="" id="goBack" class="dblogo">eboydb</a>: {{ this._id }}
 		</span>
-		<a href="{{ pathFor 'docAdd' }}">+</a>
+		<a href="{{ pathFor 'addDoc' }}">+</a>
 	</div>
 </template>
 
