--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -5,7 +5,7 @@
 			<!-- <img style="background-color: none" src="{{ this.url 	store='OriginalPix' }}" width="{{ this.	metadata.width }}" height="{{ this.metadata.height }}" /> -->
 			<!-- <img style="background-color: none" src="{{ this.url 	store='OriginalPix' }}" width="{{ 	deviceDimensions.width }}" height="{{ deviceDimensions.height }}" /> -->
 			<a href="{{ pathFor 'spriteBox' boxsize='512' }}">
-				<img style="background-color: {{ backColor }}" src="{{ this.url store='OriginalPix' }}" width="{{ 	deviceDimensions.width }}" height="{{ deviceDimensions.height }}" />
+				<img style="background-color: {{ backColor }}" src="{{ this.url }}" width="{{ 	deviceDimensions.width }}" height="{{ deviceDimensions.height }}" />
 			</a>
 		</div>
 	</div>
